test/files/neg/multi-array.check
<<<<<<< HEAD
multi-array.scala:6: warning: new Array(...) with multiple dimensions has been deprecated; use Array.ofDim(...) instead
  val a: Array[Int] = new Array(10, 10)
                      ^
multi-array.scala:6: error: too many dimensions for array creation
  val a: Array[Int] = new Array(10, 10)
                      ^
one warning found
=======
multi-array.scala:7: error: too many arguments for constructor Array: (_length: Int)Array[T]
  val a: Array[Int] = new Array(10, 10)
                      ^
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
one error found
